# SmartParking

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Smart Parking.docx  TEAM_GOALS.md  TEAM_WORKFLOW.md  conanfile.txt  test01.txt
config/: db_config.example.json
frontend/: admin.html  dashboard.html  index.html  init.html  profile.html  register.html  reservation.html  vehicles.html
frontend/css/: style.css
frontend/js/: admin.js  auth.js  common.js  dashboard.js  init.js  profile.js  vehicles.js
sql/: init.sql
src/: config.cpp  config.h  main.cpp  permissions.h  sha256.h
src/controller/: auth_controller.cpp  auth_controller.h  balance_controller.cpp  balance_controller.h  base_controller.cpp  base_controller.h  blacklist_controller.cpp  blacklist_controller.h  bulletin_controller.cpp  bulletin_controller.h  parking_controller.cpp  parking_controller.h  pass_plan_controller.cpp  pass_plan_controller.h  plate_controller.cpp  plate_controller.h  report_controller.cpp  report_controller.h  reservation_controller.cpp  reservation_controller.h  user_controller.cpp  user_controller.h  vehicle_controller.cpp  vehicle_controller.h
src/database/: db_init.cpp  db_init.h  mysql_pool.cpp  mysql_pool.h
src/model/: balance_record.h  base_model.h  billing.h  blacklist.h  bulletin.h  car_record.h  interception_log.h  parking_lot.h  reservation.h  user.h
src/service/: auth_service.cpp  auth_service.h  balance_service.cpp  balance_service.h  base_service.cpp  base_service.h  billing_service.cpp  billing_service.h  blacklist_service.cpp  blacklist_service.h  bulletin_service.h  crud_service.h  parking_service.cpp  parking_service.h  pass_plan_service.cpp  pass_plan_service.h  plate_service.cpp  plate_service.h  report_service.cpp  report_service.h  reservation_service.cpp  reservation_service.h  user_service.cpp  user_service.h  vehicle_service.cpp  vehicle_service.h
